laborations/lab2/testsuite/bad/bad/decl_if_branch_leakage.cc
// Check that scope of then-statement does not leak into else-statement

int main () {
  if (false) int x = 1; else return x;
}
